# copy_trade_telegram

./: .env.example  .env_example  .gitignore  Cargo.toml  README.md
examples/: play.rs  play_with_meme_trader.rs
src/: config.rs  db.rs  downloader.rs  lib.rs  main.rs
src/signer/: mod.rs  solana.rs
src/solana/: balance.rs  constants.rs  mod.rs  pump.rs  raydium.rs  tools.rs  trade_pump.rs  trade_raydium.rs  transaction.rs  util.rs
src/tg_copy/: active_trade.rs  copier.rs  db.rs  downloader.rs  mod.rs  parse_trade.rs  strategy.rs
src/trade/: meme_trader.rs  mod.rs
