[package]
name = "copy-trade-telegram"
version = "0.1.0"
edition = "2021"

[features]
default = ["solana"]
solana = []
http = []
evm = []

[dependencies]
anyhow = "1.0"
async-trait = "0.1.85"
base64 = "0.22.1"
borsh = "1.5.1"
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.6"
futures = "0.3"
grammers-client = "0.7.0"
grammers-session = "0.7.0"
hex = "0.4.3"
log = "0.4.25"
mime_guess = "2.0.5"
mongodb = "2.8"
once_cell = "1.20.2"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["json", "stream", "multipart"] }
rig-core = "0.7.0"
rig-tool-macro = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.116"
serde_with = "3.12.0"
simple_logger = "5.0.0"
solana-account-decoder = { version = "2.1.9" }
solana-client = { version = "2.1.9" }
solana-sdk = { version = "2.1.9" }
solana-transaction-status = { version = "2.1.9" }
spl-associated-token-account = { version = "6.0.0"}
spl-token = { version = "7.0.0" }
thiserror = "2.0.11"
timed = "0.2.1"
tokio = { version = "1.43.0", default-features = false, features = [
    "rt",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
